--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "slide",
   "version": "1.0.0",
   "description": "a slde app",
-  "main": "index.js",
+  "main": "server/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "node /server/server.js"
   },
   "keywords": [
     "slide"
